--- a/scss/common/_login.scss
+++ b/scss/common/_login.scss
@@ -26,7 +26,7 @@
     &[type='email'],
     &[type='password'],
     &[type='text'] {
-      @extend %text-field-box;
+      @include text-field-box;
 
       margin-bottom: $modal-inner-spacer-y;
     }
@@ -122,7 +122,7 @@
 
 .forgot-password-modal {
   input[type='text'] {
-    @extend %text-field-box;
+    @include text-field-box;
 
     margin-bottom: 0;
   }
