--- a/scss/mixins/_text-field.scss
+++ b/scss/mixins/_text-field.scss
@@ -1,4 +1,4 @@
-%text-field {
+@mixin text-field {
   background-clip: padding-box;
   background-color: transparent;
   background-image: none;
@@ -34,7 +34,7 @@
   }
 }
 
-%text-field-box {
+@mixin text-field-box {
   background-color: color-chooser($text-field-box-bg-dark, $text-field-box-bg-light);
   border-radius: $text-field-box-border-radius;
   height: $text-field-box-height;
