--- a/scss/common/_cooked.scss
+++ b/scss/common/_cooked.scss
@@ -23,27 +23,27 @@
   }
 
   h1 {
-    @extend %typography-h1;
+    @include typography-h1;
   }
 
   h2 {
-    @extend %typography-h2;
+    @include typography-h2;
   }
 
   h3 {
-    @extend %typography-h3;
+    @include typography-h3;
   }
 
   h4 {
-    @extend %typography-h4;
+    @include typography-h4;
   }
 
   h5 {
-    @extend %typography-h5;
+    @include typography-h5;
   }
 
   h6 {
-    @extend %typography-h6;
+    @include typography-h6;
   }
 
   iframe {
@@ -104,27 +104,27 @@
   }
 
   h1 {
-    @extend %typography-h1;
+    @include typography-h1;
   }
 
   h2 {
-    @extend %typography-h2;
+    @include typography-h2;
   }
 
   h3 {
-    @extend %typography-h3;
+    @include typography-h3;
   }
 
   h4 {
-    @extend %typography-h4;
+    @include typography-h4;
   }
 
   h5 {
-    @extend %typography-h5;
+    @include typography-h5;
   }
 
   h6 {
-    @extend %typography-h6;
+    @include typography-h6;
   }
 
   ol,
