--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -40,7 +40,7 @@
   width: auto;
 
   h3 {
-    @extend %typography-h4;
+    @include typography-h4;
 
     margin-bottom: 0;
     text-align: left;
@@ -109,7 +109,7 @@
       border-left-width: ($table-border-width * 2);
 
       h3 {
-        @extend %typography-h6;
+        @include typography-h6;
       }
     }
   }
