--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -70,9 +70,11 @@ $white-divider:   rgba(255, 255, 255, .12) !default;
 
 // Basics - Misc
 
-$border-radius:  4px !default;
-$border-width:   1px !default;
-$control-height: 36px !default;
+$border-radius:     4px !default;
+$border-width:      1px !default;
+$control-height:    36px !default;
+$control-height-lg: 40px !default;
+$control-height-sm: 32px !default;
 
 
 
@@ -213,26 +215,27 @@ $btn-bg-hover-dark:        $dark-hover !default;
 $btn-bg-hover-light:       $light-hover !default;
 $btn-bg-overlay-dark:      $black-divider !default;
 $btn-bg-overlay-light:     $black-divider !default;
-$btn-border-radius:        4px !default;
+$btn-border-radius:        $border-radius !default;
 $btn-box-shadow:           $shadow-2dp !default;
 $btn-box-shadow-active:    $shadow-8dp !default;
 $btn-color-dark:           unquote('$primary') !default;
 $btn-color-light:          unquote('$primary') !default;
 $btn-color-disabled-dark:  rgba(0, 0, 0, .3) !default;
 $btn-color-disabled-light: rgba(0, 0, 0, .26) !default;
-$btn-height:               36px !default;
-$btn-height-lg:            40px !default;
-$btn-height-sm:            32px !default;
-$btn-font-size:            14px !default;
-$btn-font-size-lg:         15px !default;
-$btn-font-size-sm:         13px !default;
+$btn-height:               $control-height !default;
+$btn-height-lg:            $control-height-lg !default;
+$btn-height-sm:            $control-height-sm !default;
+$btn-font-size:            $font-size-base !default;
+$btn-font-size-lg:         ($font-size-base + 1) !default;
+$btn-font-size-sm:         ($font-size-base - 1) !default;
 $btn-font-weight:          500 !default;
-$btn-padding-x:            16px !default;
-$btn-padding-x-lg:         16px !default;
-$btn-padding-x-sm:         16px !default;
-$btn-padding-y:            (($btn-height - $btn-font-size) / 2) !default;
-$btn-padding-y-lg:         (($btn-height-lg - $btn-font-size-lg) / 2) !default;
-$btn-padding-y-sm:         (($btn-height-sm - $btn-font-size-sm) / 2) !default;
+$btn-line-height:          1 !default;
+$btn-padding-x:            $spacer-x !default;
+$btn-padding-x-lg:         $spacer-x !default;
+$btn-padding-x-sm:         $spacer-x !default;
+$btn-padding-y:            (($btn-height - $btn-font-size * $btn-line-height) / 2) !default;
+$btn-padding-y-lg:         (($btn-height-lg - $btn-font-size-lg * $btn-line-height) / 2) !default;
+$btn-padding-y-sm:         (($btn-height-sm - $btn-font-size-sm * $btn-line-height) / 2) !default;
 
 
 
