--- a/scss/common/_base-override.scss
+++ b/scss/common/_base-override.scss
@@ -15,7 +15,7 @@ tbody {
   }
 
   .fa {
-    margin-right: $spacer-inline;
+    margin-right: $spacer-x-inline;
   }
 }
 
@@ -61,7 +61,7 @@ tbody {
 
       .d-icon {
         font-size: ($nav-link-font-size - 1) !important;
-        margin-right: $spacer-inline;
+        margin-right: $spacer-x-inline;
         opacity: 1;
       }
     }
@@ -98,7 +98,7 @@ tbody {
 
     .d-icon {
       font-size: ($nav-link-font-size - 1) !important;
-      margin-right: $spacer-inline;
+      margin-right: $spacer-x-inline;
     }
   }
 
@@ -117,7 +117,7 @@ tbody {
   }
 
   .glyph {
-    margin-right: $spacer-inline;
+    margin-right: $spacer-x-inline;
     width: auto;
   }
 }
